--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,28 +1,17 @@
 <header>
   <div class="top-bar">
     <div class="left">
-
       <!-- Instagram -->
-      <a
-        href="https://www.instagram.com/anothercloset.dk/"
-        target="_blank"
-        rel="noopener"
-      >
+      <a href="https://www.instagram.com/anothercloset.dk/" target="_blank" rel="noopener">
         <span class="icon">
           <svg width="16" height="16" viewBox="0 0 24 24" fill="white">
-            <path
-              d="M7.5 2C4.462 2 2 4.462 2 7.5v9C2 19.538 4.462 22 7.5 22h9c3.038 0 5.5-2.462 5.5-5.5v-9C22 4.462 19.538 2 16.5 2h-9zM12 8.1a3.9 3.9 0 1 1 0 7.8 3.9 3.9 0 0 1 0-7.8zm6-1.6a1.1 1.1 0 1 1 0 2.2 1.1 1.1 0 0 1 0-2.2z"
-            ></path>
+            <path d="M7.5 2C4.462 2 2 4.462 2 7.5v9C2 19.538 4.462 22 7.5 22h9c3.038 0 5.5-2.462 5.5-5.5v-9C22 4.462 19.538 2 16.5 2h-9zM12 8.1a3.9 3.9 0 1 1 0 7.8 3.9 3.9 0 0 1 0-7.8zm6-1.6a1.1 1.1 0 1 1 0 2.2 1.1 1.1 0 0 1 0-2.2z"></path>
           </svg>
         </span>
       </a>
 
       <!-- Facebook -->
-      <a
-        href="https://www.facebook.com/anotherclosetdanmark"
-        target="_blank"
-        rel="noopener"
-      >
+      <a href="https://www.facebook.com/anotherclosetdanmark" target="_blank" rel="noopener">
         <span class="icon">
           <svg width="16" height="16" viewBox="0 0 24 24" fill="white">
             <g transform="scale(0.85) translate(2.1, 2)">
@@ -35,11 +24,7 @@
       </a>
 
       <!-- TikTok -->
-      <a
-        href="https://www.tiktok.com/@anothercloset.dk"
-        target="_blank"
-        rel="noopener"
-      >
+      <a href="https://www.tiktok.com/@anothercloset.dk" target="_blank" rel="noopener">
         <span class="icon">
           <svg width="16" height="16" viewBox="0 0 24 24" fill="white">
             <path
@@ -62,29 +47,23 @@
         <div class="dropdown">
           <div class="nav-item">DIT FÆLLESSKAB ▾</div>
           <ul class="dropdown-menu">
-            <li><a href="/Roskilde">Roskilde</a></li>
             <li><a href="/Nørrebro">Nørrebro</a></li>
             <li><a href="/Lyngby">Lyngby</a></li>
-            <li><a href="/Ringkøbing">Ringkøbing</a></li>
-            <li><a href="/Ribe">Ribe</a></li>
-            <li><a href="/Aau Kbh">AAU Kbh</a></li>
             <li><a href="/Fredericia">Fredericia</a></li>
+            <li><a href="/Ribe">Ribe</a></li>
+            <li><a href="/Roskilde">Roskilde</a></li>
+            <li><a href="/Ringkøbing">Ringkøbing</a></li>
           </ul>
         </div>
       </div>
       <div class="logo-wrapper">
         <a href="/">
-          <img
-            src="/billeder/headerlogo.webp"
-            alt="Another logo"
-            class="logo-img"
-          />
+          <img src="/billeder/headerlogo.webp" alt="Another logo" class="logo-img" />
         </a>
       </div>
 
       <div class="side right">
         <a href="/medlem" class="nav-item">BLIV MEDLEM</a>
-
       </div>
     </nav>
   </div>
