--- a/src/components/Vindue.astro
+++ b/src/components/Vindue.astro
@@ -5,6 +5,11 @@
 
 <style>
     section{
-        height: 550px;
+        display: none;
     }
+     @media (min-width: 768px) {
+    section{
+        display: block;
+        height: 550px;
+    }}
 </style>
