plakat netlify fix

--- a/src/components/Plakat.astro
+++ b/src/components/Plakat.astro
@@ -1,18 +1,10 @@
 <section>
-  <img class="line" src="/public/billeder/plakater/line.png" alt="" />
+  <img class="line" src="/billeder/plakater/line.png" alt="" />
   <div class="posters">
     <img src="/billeder/plakater/plakat1.webp" alt="plakat1" />
-    <img src="/public/billeder/plakater/plakat2.webp" alt="plakat2" />
-    <img
-      class="hide"
-      src="/public/billeder/plakater/plakat3.webp"
-      alt="plakat3"
-    />
-    <img
-      class="hide"
-      src="/public/billeder/plakater/plakat4.webp"
-      alt="plakat4"
-    />
+    <img src="/billeder/plakater/plakat2.webp" alt="plakat2" />
+    <img class="hide" src="/billeder/plakater/plakat3.webp" alt="plakat3" />
+    <img class="hide" src="/billeder/plakater/plakat4.webp" alt="plakat4" />
   </div>
 </section>
 
