--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -3,27 +3,21 @@
 ---
 
 <video autoplay muted loop playsinline class="forside-video">
-  <source src="/public/videoer/Herocomputer.mp4" type="video/mp4" />
+  <source src="/videoer/Herocomputer.mp4" type="video/mp4" />
 </video>
 
-
 <style>
- 
-
-
   .forside-video {
     position: relative;
     top: 0;
     left: 0;
     width: 100%;
     z-index: -3;
-
   }
 
-    @media (min-width: 768px) {
-          .forside-video {
-            position: fixed;
-
-          }
+  @media (min-width: 768px) {
+    .forside-video {
+      position: fixed;
     }
+  }
 </style>
