--- a/src/components/Ambas_popup.astro
+++ b/src/components/Ambas_popup.astro
@@ -96,13 +96,13 @@
     padding: 0.5rem;
     border: none;
     border-radius: 4px;
-    background: #ef9675;
-    color: #fff;
+    background: #ffffff;
+    color: #a81414;
     font-size: 0.9rem;
   }
 
   .form input::placeholder {
-    color: rgba(255, 255, 255, 0.7);
+    color: rgba(57, 57, 57, 0.7);
   }
 
   .form input:focus {
@@ -115,7 +115,7 @@
     padding: .5rem;
     border: none;
     border-radius: 4px;
-    background: #ef9675;
+    background: #ffffff;
     color: #fff;
     font-size: .9rem;
     line-height: 1.2;          /* make sure lines stack at top */
@@ -123,7 +123,7 @@
   }
 
   .form textarea::placeholder {
-    color: rgba(255,255,255,0.7);
+    color: rgba(98, 97, 97, 0.7);
     text-align: left;          /* explicit, though default */
   }
 
