--- a/src/components/Guide.astro
+++ b/src/components/Guide.astro
@@ -5,7 +5,7 @@
       <div class="text">
         <h2>Hvordan fungerer det?</h2>
         <h3>1. Find dit tøjfællesskab</h3>
-        <p>Vi tilknytter kurérer over hele landet, og du kan altid skifte, hvis du ønsker det.</p>
+        <p>Vi tilbydder fællesskaber over hele landet, og du kan altid skifte, hvis du ønsker det.</p>
       </div>
       <img src="/billeder/1guide.webp" alt="" />
       <div class="dots">
