--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -45,8 +45,9 @@
     <nav class="nav-links">
       <div class="side left">
         <div class="dropdown">
-          <div class="nav-item">DIT FÆLLESSKAB ▾</div>
+          <div class="nav-item" id="dropdown-toggle">DIT FÆLLESSKAB ▾</div>
           <ul class="dropdown-menu">
+            <li><a href="/begivenheder"><strong>Alle fællesskaber</strong></a></li>
             <li><a href="/Nørrebro">Nørrebro</a></li>
             <li><a href="/Lyngby">Lyngby</a></li>
             <li><a href="/Fredericia">Fredericia</a></li>
