--- a/src/components/Kort.astro
+++ b/src/components/Kort.astro
@@ -8,108 +8,42 @@ import PinIcon from "/public/billeder/pin.png";
 
   <div class="content">
     <div class="map-wrapper">
-      <img
-        src={MapImage.src}
-        alt="Kort over Danmark med eventsteder"
-        class="map"
-      />
+      <img src={MapImage.src} alt="Kort over Danmark med eventsteder" class="map" />
 
-      <a
-        href="/src/pages/singleview.astro"
-        class="marker"
-        style="top: 60%; left: 77.5%;"
-      >
+      <a href="/src/pages/singleview.astro" class="marker" style="top: 60%; left: 77.5%;">
         <img src={PinIcon.src} alt="Marker" class="marker-default" />
-        <img
-          src="/public/billeder/PinHover-Roskilde.png"
-          alt="Hover Marker"
-          class="marker-hover"
-        />
+        <img src="/billeder/PinHover-Roskilde.png" alt="Hover Marker" class="marker-hover" />
       </a>
-      <a
-        href="/src/pages/singleview.astro"
-        class="marker"
-        style="top: 60%; left: 85%;"
-      >
+      <a href="/src/pages/singleview.astro" class="marker" style="top: 60%; left: 85%;">
         <img src={PinIcon.src} alt="Marker" class="marker-default" />
-        <img
-          src="/public/billeder/PinHover-AAU.png"
-          alt="Hover Marker"
-          class="marker-hover"
-        />
+        <img src="/billeder/PinHover-AAU.png" alt="Hover Marker" class="marker-hover" />
       </a>
-      <a
-        href="/src/pages/singleview.astro"
-        class="marker"
-        style="top: 46%; left: 18%;"
-      >
+      <a href="/src/pages/singleview.astro" class="marker" style="top: 46%; left: 18%;">
         <img src={PinIcon.src} alt="Marker" class="marker-default" />
-        <img
-          src="/public/billeder/PinHover-Ringkobing.png"
-          alt="Hover Marker"
-          class="marker-hover"
-        />
+        <img src="/billeder/PinHover-Ringkobing.png" alt="Hover Marker" class="marker-hover" />
       </a>
-      <a
-        href="/src/pages/singleview.astro"
-        class="marker"
-        style="top: 69%; left: 25%;"
-      >
+      <a href="/src/pages/singleview.astro" class="marker" style="top: 69%; left: 25%;">
         <img src={PinIcon.src} alt="Marker" class="marker-default" />
-        <img
-          src="/public/billeder/PinHover-Ribe.png"
-          alt="Hover Marker"
-          class="marker-hover"
-        />
+        <img src="/billeder/PinHover-Ribe.png" alt="Hover Marker" class="marker-hover" />
       </a>
-      <a
-        href="/src/pages/singleview.astro"
-        class="marker"
-        style="top: 59%; left: 83%;"
-      >
+      <a href="/src/pages/singleview.astro" class="marker" style="top: 59%; left: 83%;">
         <img src={PinIcon.src} alt="Marker" class="marker-default" />
-        <img
-          src="/public/billeder/PinHover-Norrebro.png"
-          alt="Hover Marker"
-          class="marker-hover"
-        />
+        <img src="/billeder/PinHover-Norrebro.png" alt="Hover Marker" class="marker-hover" />
       </a>
-      <a
-        href="/src/pages/singleview.astro"
-        class="marker"
-        style="top: 57%; left: 85%;"
-      >
+      <a href="/src/pages/singleview.astro" class="marker" style="top: 57%; left: 85%;">
         <img src={PinIcon.src} alt="Marker" class="marker-default" />
-        <img
-          src="/public/billeder/PinHover-Lyngby.png"
-          alt="Hover Marker"
-          class="marker-hover"
-        />
+        <img src="/billeder/PinHover-Lyngby.png" alt="Hover Marker" class="marker-hover" />
       </a>
-      <a
-        href="/src/pages/singleview.astro"
-        class="marker"
-        style="top: 62%; left: 40%;"
-      >
+      <a href="/src/pages/singleview.astro" class="marker" style="top: 62%; left: 40%;">
         <img src={PinIcon.src} alt="Marker" class="marker-default" />
-        <img
-          src="/public/billeder/PinHover-Fredericia.png"
-          alt="Hover Marker"
-          class="marker-hover"
-        />
+        <img src="/billeder/PinHover-Fredericia.png" alt="Hover Marker" class="marker-hover" />
       </a>
     </div>
 
     <div class="text">
       <h2 class="desktop-heading">Find dit tøjfællesskab</h2>
-      <p>
-        Another Closet er mere end mode – det er et fællesskab. Vi samler dig og
-        andre til swap events, workshops og talks om bæredygtig stil. Kom og vær
-        med til at dele, lære og inspirere!
-      </p>
-      <a href="/begivenheder" class="event-link">
-        Læs mere om vores events her
-      </a>
+      <p>Another Closet er mere end mode – det er et fællesskab. Vi samler dig og andre til swap events, workshops og talks om bæredygtig stil. Kom og vær med til at dele, lære og inspirere!</p>
+      <a href="/begivenheder" class="event-link"> Læs mere om vores events her </a>
     </div>
   </div>
 </section>
