--- a/src/ccs/global.css
+++ b/src/ccs/global.css
@@ -8,6 +8,7 @@
 }
 body {
   font-family: "IBM Plex Sans", sans-serif;
+  background-color: #fefde9;
 }
 h2 {
   font-family: "Oregon LDO", sans-serif;
