--- a/src/components/Kort.astro
+++ b/src/components/Kort.astro
@@ -51,7 +51,6 @@ import PinIcon from "/public/billeder/pin.png";
 <style>
   .community {
     background-color: #fefde9;
-    padding: 5%;
   }
 
   h2 {
@@ -130,12 +129,11 @@ import PinIcon from "/public/billeder/pin.png";
   }
 
   .text {
-    font-size: 1.2rem;
     line-height: 1.8;
     max-width: 550px;
     text-align: center;
     margin-top: -50px;
-    padding: 5%;
+    margin-right: 2rem;
   }
 
   .event-link {
@@ -151,14 +149,14 @@ import PinIcon from "/public/billeder/pin.png";
     .content {
       flex-direction: row-reverse;
       justify-content: center;
-      align-items: flex-start;
       gap: 0rem;
+      margin-top: auto;
     }
 
     .text {
       text-align: left;
       margin-top: 0px;
-      padding: 5%;
+      font-size: clamp(0.8rem, 1.5vw, 2rem);
     }
 
     .mobile-heading {
@@ -171,8 +169,7 @@ import PinIcon from "/public/billeder/pin.png";
       margin-bottom: 1rem;
     }
     .community {
-      padding: 150px;
-      margin-top: -120px;
+      padding: 2rem;
     }
 
     h2 {
