--- a/src/pages/[by].astro
+++ b/src/pages/[by].astro
@@ -2,6 +2,7 @@
 // src/pages/[by].astro
 import Layout from "../layouts/Layout.astro";
 import EventDetails from "../components/EventDetails.astro";
+import "../ccs/global.css";
 
 export async function getStaticPaths() {
   const cities = ["Nørrebro", "Lyngby", "Fredericia", "Ribe", "Roskilde", "Ringkøbing"];
