--- a/src/pages/begivenheder.astro
+++ b/src/pages/begivenheder.astro
@@ -3,15 +3,15 @@ import Begivenhedsmap from "../components/BegivenhedsMap.astro";
 import Layout from "../layouts/Layout.astro";
 import Cards from "../components/Card.astro";
 import Lokalomraade from "../components/Lokalomraade.astro";
+import "../ccs/global.css";
 ---
-
 
 <html>
   <body>
     <Layout>
-    <Begivenhedsmap/>
-    <Cards/>
-    <Lokalomraade/>
+      <Begivenhedsmap />
+      <Cards />
+      <Lokalomraade />
     </Layout>
   </body>
 </html>
