--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -76,7 +76,7 @@
   .dropdown-menu {
     display: none;
     position: absolute;
-    background-color: #fef9e9;
+    background-color: #fefde9;
     list-style: none;
     margin-right: 20px;
     padding: 0.5rem 0;
