--- a/src/components/Lokalomraade.astro
+++ b/src/components/Lokalomraade.astro
@@ -1,22 +1,20 @@
 <div class="text">
-    <h2>Er dit lokalområde ikke på listen?</h2>
-    <p>Vær med til at starte et tøjfællesskab for dig og dine naboer</p>
-    <a href="/medlem" class="button">Bliv ambassadør</a>
-    
+  <h2>Er dit lokalområde ikke på listen?</h2>
+  <p>Vær med til at starte et tøjfællesskab for dig og dine naboer</p>
+  <a href="/medlem" class="button">Bliv ambassadør</a>
 </div>
 
-<img src="/public/billeder/dashed-line.webp" alt="">
+<img src="/billeder/dashed-line.webp" alt="" />
 
 <style>
-    
-    body{
-        background-color: #fefde9;
-    }
+  body {
+    background-color: #fefde9;
+  }
 
-   img{
+  img {
     display: none;
-   } 
-.text{
+  }
+  .text {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,28 +22,26 @@
     z-index: 1;
     position: relative;
     margin: 5rem auto 5rem auto;
+  }
 
-}
-
-.button{
+  .button {
     padding: 0.5em 3em;
     margin-top: 1rem;
-    background-color: #f6451a ;
+    background-color: #f6451a;
     border: none;
     border-radius: 8px;
     color: white;
     text-decoration: none;
     font-size: larger;
-}
+  }
 
- @media (min-width: 768px) {
-    img{
-    display: block;
-    position: absolute;
-    left: 60%;
-    width: 10cqw;
-    top: 160%;
-}
- }
-
+  @media (min-width: 768px) {
+    img {
+      display: block;
+      position: relative;
+      left: 70%;
+      width: 10rem;
+      top: -30%;
+    }
+  }
 </style>
