--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,51 +1,46 @@
 <div class="cards">
- 
   <div class="card">
-    <img src="/billeder/Ribe-Lineart.webp" alt="stregtegning af by">
+    <img src="/billeder/Ribe-Lineart.webp" alt="stregtegning af by" />
     <h3>Ribe</h3>
-    <button> <a href="/singleview">Se events og tilmeld dig</a></button>
+    <button> <a href="/Ribe">Se events og tilmeld dig</a></button>
   </div>
 
   <div class="card">
-    <img src="/billeder/Fredericia-Lineart.webp" alt="Stregtegning af by">
+    <img src="/billeder/Fredericia-Lineart.webp" alt="Stregtegning af by" />
     <h3>Fredericia</h3>
-    <button> <a href="/singleview">Se events og tilmeld dig</a></button>
+    <button> <a href="/Fredericia">Se events og tilmeld dig</a></button>
   </div>
 
-<div class="card">
-    <img src="/public/billeder/Ringkøbing-Lineart.webp" alt="Stregtegning af by">
+  <div class="card">
+    <img src="/public/billeder/Ringkøbing-Lineart.webp" alt="Stregtegning af by" />
     <h3>Ringkøbing</h3>
-    <button> <a href="/singleview">Se events og tilmeld dig</a></button>
+    <button> <a href="/Ringkøbing">Se events og tilmeld dig</a></button>
   </div>
 
   <div class="card">
-    <img src="/public/billeder/Roskilde-Lineart.webp" alt="Stregtegning af by">
+    <img src="/public/billeder/Roskilde-Lineart.webp" alt="Stregtegning af by" />
     <h3>Roskilde</h3>
-    <button> <a href="/singleview">Se events og tilmeld dig</a></button>
+    <button> <a href="/Roskilde">Se events og tilmeld dig</a></button>
   </div>
 
   <div class="card">
-    <img src="/public/billeder/Lyngby-Lineart.webp" alt="Stregtegning af by">
+    <img src="/public/billeder/Lyngby-Lineart.webp" alt="Stregtegning af by" />
     <h3>Lyngby</h3>
-    <button> <a href="/singleview">Se events og tilmeld dig</a></button>
+    <button> <a href="/Lyngby">Se events og tilmeld dig</a></button>
   </div>
 
   <div class="card">
-    <img src="/public/billeder/Nørrebro-Lineart.webp" alt="Stregtegning af by">
+    <img src="/public/billeder/Nørrebro-Lineart.webp" alt="Stregtegning af by" />
     <h3>Nørrebro</h3>
-    <button> <a href="/singleview">Se events og tilmeld dig</a></button>
+    <button> <a href="/Nørrebro">Se events og tilmeld dig</a></button>
   </div>
 
-  <div class="card">
+  <!-- <div class="card">
     <img src="/public/billeder/AAU-Lineart.webp" alt="Stregtegning af by">
     <h3>AAU København</h3>
     <button> <a href="/singleview">Se events og tilmeld dig</a></button>
-  </div>
-
-
+  </div> -->
 </div>
-
-
 
 <style>
   .cards {
@@ -53,16 +48,16 @@
     gap: 3rem;
     overflow-x: auto;
     -ms-overflow-style: none; /* Fjerner visuel scrollbar */
-    scrollbar-width: none;  /* Fjerner visuel scrollbar */
+    scrollbar-width: none; /* Fjerner visuel scrollbar */
     padding: 1rem;
-    background-color:  #fefde9 ;
+    background-color: #fefde9;
     margin: auto 0 auto 4rem;
   }
   .card {
     flex: 0 0 200px;
     background-color: white;
     border-radius: 12px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -74,12 +69,12 @@
     object-fit: cover;
   }
   .card h3 {
-    margin: .75rem 0 .5rem;
+    margin: 0.75rem 0 0.5rem;
     font-size: 1.1rem;
     text-align: center;
   }
   .card button {
-    padding: .5rem 1rem;
+    padding: 0.5rem 1rem;
     border: none;
     border-radius: 6px;
     background: rgba(80, 110, 92, 1);
@@ -89,10 +84,8 @@
   .card button:hover {
     background: rgb(60, 82, 69);
   }
-  a{
+  a {
     text-decoration: none;
     color: #fefde9;
   }
 </style>
-
-
